@@ -5,7 +5,7 @@
 # Required-Stop:     $remote_fs
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
-# Short-Description: launch /usr/local/bin/zena_<%= config[:db_name] %>
+# Short-Description: launch <%= init_script %>
 ### END INIT INFO
 
 # Author: Gaspard Bucher <gaspard@teti.ch>
@@ -18,15 +18,15 @@ DESC="Zena server"
 case "$1" in
   start)
         # launch all services for <%= config[:db_name] %>
-        /usr/local/bin/zena_<%= config[:db_name] %> start
+        <%= init_script %> start
 	;;
   stop)
         # stop all services for <%= config[:db_name] %>
-        /usr/local/bin/<%= config[:db_name] %> stop
+        <%= init_script %> stop
 	;;
   restart)
         # restart all services for <%= config[:db_name] %>
-        /usr/local/bin/<%= config[:db_name] %> restart
+        <%= init_script %> restart
 	;;
   *)
 	echo "Usage: $SCRIPTNAME {start|stop|restart}" >&2
